Revert "List.of(Optional.empty()) --> Collections.emptyList()"
This reverts commit da0e4c637f2d5e41b14fde3518068ef943e035a3.