@@ -9,7 +9,6 @@ import app.coronawarn.server.common.protocols.internal.stats.KeyFigureCard.Build
 import app.coronawarn.server.services.distribution.statistics.StatisticsJsonStringObject;
 import app.coronawarn.server.services.distribution.statistics.keyfigurecard.KeyFigureCardSequenceConstants;
 import app.coronawarn.server.services.distribution.statistics.keyfigurecard.ValueTrendCalculator;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -74,7 +73,7 @@ public class KeySubmissionCardFactory extends HeaderCardFactory {
         || stats.getPersonWhoSharedKeys7daysAvg() <= 0
         || stats.getPersonsWhoSharedKeysCumulated() <= 0
         || stats.getPersonsWhoSharedKeysDaily() <= 0) {
-      return Collections.emptyList();
+      return List.of(Optional.empty());
     }
 
     return requiredFields;
